syntax = "proto3";

package sniper;

option cc_enable_arenas = true;

/// Sparse feature.
message SparseFeature {
    /// Index of sparse feature in feature file.
    uint32 index = 1;

    /// Value of sparse feature, use uint64 as type.
    repeated uint64 values = 2;
}

/// Dense feature, the type is float.
message DenseFeature {
    /// Index of dense feature in feature file.
    uint32 index = 1;

    /// Value of dense feature.
    repeated float values = 2;
}

/// All features.
message SimpleFeatures {
    /// Request id.
    uint64 llsid = 1;

    /// item_idã€‚
    uint64 item_id = 2;

    /// Sparse feature.
    repeated SparseFeature sparse_feature = 3;

    /// Dense feature.
    repeated DenseFeature dense_feature = 4;

    /// Label, only one int64 is supported currently.
    int64 label = 5;
}
