syntax = "proto3";

package sniper;

option cc_enable_arenas = true;

/// sparse 特征。
message SparseFeature {
    /// 特征文件中对应的特征下标。
    uint32 index = 1;

    /// 特征值，统一用 uint64 表示。
    repeated uint64 values = 2;
}

/// dense 特征，都是 float。
message DenseFeature {
    /// 特征文件中对应的特征下标。
    uint32 index = 1;

    /// 特征值。
    repeated float values = 2;
}

/// 所有特征。
message Features {
    /// 特征格式版本。
    uint32 version = 1; // 版本

    /// 请求 id。
    uint64 llsid = 2;

    /// user_id。
    uint64 user_id = 3;

    /// item_id。
    uint64 item_id = 4;

    /// sparse 特征，与特征文件对应。
    repeated SparseFeature sparse_feature = 5;

    /// dense 特征，与特征文件对应。
    repeated DenseFeature dense_feature = 6;

    /// label, 目前只支持一个 int64, 考虑到可扩展性，类型为 repeated int64。
    repeated int64 final_label = 7;
}
